fixed filter propagate, added gap

--- a/src/app/modules/sale/components/dashboard/components/filter-panel/filter-panel.component.scss
+++ b/src/app/modules/sale/components/dashboard/components/filter-panel/filter-panel.component.scss
@@ -2,6 +2,7 @@
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
+	gap: 3px;
 
 	.filter-btn {
 		padding: 25px 15px;
